--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-responsive-modal",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "A simple responsive react modal",
   "main": "lib/modal.js",
   "scripts": {
@@ -8,8 +8,9 @@
     "build:watch": "npm run build -- --watch",
     "build:examples": "browserify examples/app.js -o examples/app.bundle.js -t [ babelify --presets [ es2015 react ] ]",
     "lint": "eslint src",
-    "test": "npm run lint",
-    "prepublish": "npm run build"
+    "test": "npm run lint && npm run build",
+    "publish-please": "publish-please",
+    "prepublish": "publish-please guard"
   },
   "keywords": [
     "react",
@@ -28,27 +29,30 @@
   "homepage": "https://github.com/pradel/react-responsive-modal#readme",
   "dependencies": {
     "classnames": "^2.2.5",
-    "jss": "^3.10.0",
+    "jss": "^3.11.1",
     "jss-camel-case": "^1.1.0",
     "jss-px": "^1.0.0",
     "jss-vendor-prefixer": "^2.0.0",
-    "react": "^15.0.2",
-    "react-addons-css-transition-group": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-jss": "^2.0.6",
-    "react-minimalist-portal": "^1.0.2"
+    "react-addons-css-transition-group": "^15.1.0",
+    "react-jss": "^2.1.0",
+    "react-minimalist-portal": "^1.0.4"
+  },
+  "peerDependencies": {
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.7.0",
-    "eslint-plugin-jsx-a11y": "^1.0.4",
-    "eslint-plugin-react": "^5.0.1"
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
+    "publish-please": "^2.1.4"
   }
 }
