--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
   "extends": "airbnb",
   "rules": {
+    "import/extensions": 0,
     "import/no-unresolved": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0
   },
   "env": {
