--- a/.publishrc
+++ b/.publishrc
@@ -5,7 +5,7 @@
     "untrackedFiles": true,
     "sensitiveData": true,
     "branch": "master",
-    "gitTag": false
+    "gitTag": true
   },
   "confirm": true,
   "publishTag": "latest",
