--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "prop-types": "^15.5.8",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-jss": "^4.2.0",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-jss": "^6.1.1",
     "react-minimalist-portal": "^1.1.0"
   },
   "peerDependencies": {
@@ -42,11 +42,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
+    "browserify": "^14.4.0",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
