--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,9 @@
     "gatsby": "^1.0.0",
     "gatsby-link": "^1.0.0",
     "gatsby-plugin-react-helmet": "^1.0.1",
+    "gatsby-remark-prismjs": "^1.0.1",
+    "gatsby-source-filesystem": "^1.0.1",
+    "gatsby-transformer-remark": "^1.0.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
