--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "no-scroll": "^2.1.0",
     "prop-types": "^15.6.0",
     "react-jss": "^7.2.0",
-    "react-minimalist-portal": "^2.1.0",
+    "react-minimalist-portal": "^2.1.1",
     "react-transition-group": "^1.2.1"
   },
   "peerDependencies": {
@@ -43,17 +43,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
+    "browserify": "^14.5.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-import": "^0.0.1",
     "eslint-plugin-react": "^7.4.0",
     "prettier": "^1.7.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "size-limit": "^0.11.5"
+    "size-limit": "^0.12.1"
   },
   "size-limit": [
     {
