--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.5.0",
     "eslint": "^3.19.0",
