try codecov setup

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "codecov": "^3.0.0",
     "decamelize": "2.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
