--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
+
 sudo: false
+
 cache: yarn
+
 node_js:
   - "8"
+
 notifications:
   email: false
+
 after_success:
-  - codecov
+  - yarn codecov
