remove jss and embed the styles, compile with rollup

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "2.0.1",
   "description": "A simple responsive react modal",
   "main": "lib/index.js",
+  "module": "lib/index.es.js",
+  "jsnext:main": "lib/index.es.js",
   "scripts": {
-    "build": "babel src --out-dir lib && node scripts/generate-css-from-jss.js",
-    "build:watch": "yarn build --watch",
+    "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "lint": "eslint src docs/src scripts __tests__",
     "test": "yarn test:coverage && yarn lint && yarn build && yarn size",
     "test:only": "jest",
     "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
-    "prettier": "prettier --single-quote --trailing-comma es5 --write \"{src,scripts,docs/src,__tests__}/**/*.{js,css}\" \"README.md\" \".github/*.md\""
+    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md}\""
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./__tests__/setupTests.js",
@@ -21,12 +23,11 @@
       "<rootDir>/__tests__/setupTests.js"
     ]
   },
-  "keywords": [
-    "react",
-    "responsive",
-    "modal",
-    "flex"
-  ],
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "keywords": ["react", "responsive", "modal", "flex"],
   "repository": "git+https://github.com/pradel/react-responsive-modal.git",
   "author": "Léo Pradel",
   "bugs": {
@@ -37,7 +38,6 @@
     "classnames": "^2.2.5",
     "no-scroll": "^2.1.0",
     "prop-types": "^15.6.1",
-    "react-jss": "^8.4.0",
     "react-lifecycles-compat": "^3.0.2",
     "react-minimalist-portal": "^2.1.1",
     "react-transition-group": "^2.3.0"
@@ -50,7 +50,8 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.3",
-    "babel-preset-es2015": "6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "codecov": "3.0.0",
@@ -69,11 +70,19 @@
     "prettier": "1.12.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "rollup": "^0.58.2",
+    "rollup-plugin-auto-external": "^1.2.0",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.1.0",
+    "rollup-plugin-postcss": "^1.6.1",
+    "rollup-plugin-url": "^1.4.0",
     "size-limit": "0.17.0"
   },
   "size-limit": [
     {
-      "path": "lib/modal.js",
+      "path": "lib/index.js",
       "limit": "6 KB"
     }
   ],
