--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["react", "es2015", "stage-2"]
+  "presets": [
+    ["env", {
+      "modules": false
+    }],
+    "react",
+    "stage-2"
+  ]
 }
