--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,7 @@
     "build": "gatsby build"
   },
   "dependencies": {
+    "react-responsive-modal": "link:..",
     "gatsby": "1.9.253",
     "gatsby-link": "1.6.41",
     "gatsby-plugin-react-helmet": "2.0.11",
@@ -17,5 +18,8 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-helmet": "5.2.0"
+  },
+  "devDependencies": {
+    "prismjs": "^1.14.0"
   }
 }
