--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,14 @@ cache: yarn
 node_js:
   - "8"
 
+install:
+  - yarn
+  - cd docs && yarn
+
+script:
+  - yarn test
+  - cd docs && yarn tests
+
 notifications:
   email: false
 
