fix babel jest config

--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,14 @@
     }],
     "react",
     "stage-2"
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        "env",
+        "react",
+        "stage-2"
+      ]
+    }
+  }
 }
