--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "import/extensions": 0,
     "import/no-unresolved": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0
