--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "lib/index.js",
   "module": "lib/index.es.js",
   "jsnext:main": "lib/index.es.js",
+  "types": "types",
   "scripts": {
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
     "lint": "eslint 'src' 'docs/src' '__tests__'",
-    "test": "yarn test:coverage && yarn lint && yarn build && yarn size",
+    "test":
+      "yarn test:coverage && yarn lint && yarn build && yarn dtslint && yarn size",
     "test:only": "jest",
     "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
     "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md}\"",
+    "dtslint": "dtslint types",
     "generate-props":
       "node scripts/generateReactPropsTable.js src/modal.js && yarn prettier"
   },
@@ -52,6 +55,8 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.3",
@@ -60,6 +65,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "codecov": "3.0.1",
+    "dtslint": "^0.3.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.19.1",
