--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,8 @@
     "import/no-unresolved": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
+    "react/button-has-type": 0,
+    "react/destructuring-assignment": 0,
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0
   },
