--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,17 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/env", {
       "modules": false
     }],
-    "react",
-    "stage-2"
+    "@babel/react"
   ],
   "env": {
     "test": {
       "presets": [
-        "env",
-        "react",
-        "stage-2"
+        "@babel/env",
+        "@babel/react"
       ]
     }
-  }
+  },
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
