--- a/package.json
+++ b/package.json
@@ -63,15 +63,17 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-rc.3",
+    "@babel/core": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.3",
+    "@babel/preset-env": "^7.0.0-rc.3",
+    "@babel/preset-react": "^7.0.0-rc.3",
     "@types/react": "16.4.12",
     "@types/react-dom": "16.0.7",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
+    "babel-core": "^7.0.0-0",
     "babel-eslint": "8.2.6",
+    "babel-jest": "^23.4.2",
     "babel-plugin-external-helpers": "6.22.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
     "codecov": "3.0.4",
     "dtslint": "0.3.0",
     "enzyme": "3.5.0",
@@ -85,13 +87,13 @@
     "eslint-plugin-react": "7.10.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.5.0",
-    "jest-enzyme": "6.0.3",
+    "jest-enzyme": "6.0.4",
     "prettier": "1.14.2",
     "react": "16.4.2",
     "react-docgen": "2.21.0",
     "react-dom": "16.4.2",
-    "rollup": "0.63.5",
-    "rollup-plugin-babel": "3.0.7",
+    "rollup": "0.65.0",
+    "rollup-plugin-babel": "^4.0.0-beta.8",
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "1.6.2",
     "size-limit": "0.19.2"
