--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "babel-jest": "^23.4.2",
     "babel-plugin-external-helpers": "6.22.0",
     "codecov": "3.0.4",
+    "docz": "^0.10.3",
+    "docz-plugin-css": "^0.10.3",
     "dtslint": "0.3.0",
     "enzyme": "3.5.0",
     "enzyme-adapter-react-16": "1.3.0",
