--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "jsnext:main": "lib/index.es.js",
   "types": "types",
   "scripts": {
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
     "lint": "eslint 'src' 'docs/src' '__tests__'",
-    "test": "yarn test:coverage && yarn lint && yarn build && yarn dtslint && yarn size",
+    "test": "yarn test:coverage && yarn lint && yarn build && yarn dtslint && yarn size && yarn docz:build",
     "test:only": "jest",
     "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
