--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "homepage": "https://github.com/pradel/react-responsive-modal#readme",
   "dependencies": {
     "classnames": "^2.2.6",
+    "focus-trap-react": "^4.0.1",
     "no-scroll": "^2.1.1",
     "prop-types": "^15.6.2",
     "react-lifecycles-compat": "^3.0.4",
@@ -106,7 +107,7 @@
   "size-limit": [
     {
       "path": "lib/index.js",
-      "limit": "7 KB"
+      "limit": "10 KB"
     }
   ],
   "license": "MIT"
