--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "docz": "0.12.9",
     "docz-plugin-css": "0.11.0",
     "docz-plugin-netlify": "1.1.4",
+    "docz-theme-default": "0.13.7",
     "dtslint": "0.3.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
