--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["config:base", "schedule:weekly"],
+  "extends": ["config:base", "schedule:monthly"],
   "automerge": true,
   "major": {
     "automerge": false
