--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "src"
   ],
   "jest": {
-    "setupTestFrameworkScriptFile": "./__tests__/setupTests.js",
+    "setupFilesAfterEnv": [
+      "./__tests__/setupTests.js"
+    ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/docs/",
@@ -71,7 +73,7 @@
     "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
-    "@types/react": "16.8.15",
+    "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -94,16 +96,16 @@
     "eslint-plugin-react": "7.12.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.8.0",
-    "jest-enzyme": "7.0.1",
+    "jest-enzyme": "7.0.2",
     "prettier": "1.16.4",
-    "react": "16.8.3",
+    "react": "16.8.6",
     "react-docgen": "2.21.0",
-    "react-dom": "16.8.3",
-    "rollup": "1.3.0",
+    "react-dom": "16.8.6",
+    "rollup": "1.11.3",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-peer-deps-external": "2.2.0",
     "rollup-plugin-postcss": "2.0.3",
-    "size-limit": "0.21.1"
+    "size-limit": "1.3.1"
   },
   "size-limit": [
     {
