--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:watch": "rollup -c -w",
     "lint": "eslint 'src' '__tests__' 'docs'",
     "test": "yarn test:coverage && yarn lint && yarn build && yarn dtslint && yarn size && yarn docz:build",
-    "test:only": "jest",
+    "test:only": "jest __tests__",
     "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
     "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md}\"",
