--- a/package.json
+++ b/package.json
@@ -75,10 +75,10 @@
     "@babel/preset-react": "7.0.0",
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.8.0",
     "babel-plugin-external-helpers": "6.22.0",
+    "babel-polyfill": "6.26.0",
     "codecov": "3.3.0",
     "docz": "0.13.7",
     "docz-plugin-css": "0.11.0",
