Upgrade docz to v1

--- a/package.json
+++ b/package.json
@@ -80,10 +80,10 @@
     "babel-plugin-external-helpers": "6.22.0",
     "babel-polyfill": "6.26.0",
     "codecov": "3.3.0",
-    "docz": "0.13.7",
+    "docz": "1.1.0",
     "docz-plugin-css": "0.11.0",
     "docz-plugin-netlify": "1.1.4",
-    "docz-theme-default": "0.13.7",
+    "docz-theme-default": "1.1.0",
     "dtslint": "0.7.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.12.1",
@@ -101,6 +101,7 @@
     "react": "16.8.6",
     "react-docgen": "2.21.0",
     "react-dom": "16.8.6",
+    "react-hot-loader": "^4.8.4",
     "rollup": "1.11.3",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-peer-deps-external": "2.2.0",
