--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:only": "jest __tests__",
     "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
-    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md}\"",
+    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\"",
     "dtslint": "dtslint types",
     "generate-props": "node scripts/generateReactPropsTable.js src/modal.js && yarn prettier"
   },
