--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "docz:build": "docz build",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
-    "lint": "eslint 'src' '__tests__' 'docs'",
+    "lint": "eslint 'src' '__tests__'",
     "test": "yarn test:coverage && yarn lint && yarn build && yarn dtslint && yarn size && yarn docz:build",
     "test:only": "jest __tests__",
     "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
-    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md}\"",
+    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\"",
     "dtslint": "dtslint types",
     "generate-props": "node scripts/generateReactPropsTable.js src/modal.js && yarn prettier"
   },
@@ -80,10 +80,10 @@
     "babel-plugin-external-helpers": "6.22.0",
     "babel-polyfill": "6.26.0",
     "codecov": "3.3.0",
-    "docz": "0.13.7",
+    "docz": "1.1.0",
     "docz-plugin-css": "0.11.0",
     "docz-plugin-netlify": "1.1.4",
-    "docz-theme-default": "0.13.7",
+    "docz-theme-default": "1.1.0",
     "dtslint": "0.7.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.12.1",
@@ -101,6 +101,7 @@
     "react": "16.8.6",
     "react-docgen": "2.21.0",
     "react-dom": "16.8.6",
+    "react-hot-loader": "^4.8.4",
     "rollup": "1.11.3",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-peer-deps-external": "2.2.0",
