--- a/mylib/package.json
+++ b/mylib/package.json
@@ -36,8 +36,7 @@
   "module": "dist/mylib.esm.js",
   "dependencies": {
     "classnames": "2.2.6",
-    "no-scroll": "^2.1.1",
-    "react-transition-group": "^4.3.0"
+    "no-scroll": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
