--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,6 @@
-# Logs
-logs
 *.log
-npm-debug.log*
-
-# Dependency directory
+.DS_Store
 node_modules
-
-# Optional npm cache directory
-.npm
-
-# Build
-lib
-
-# Webstorm
-.idea
-
-# Docz
-.docz
-
-# Jest
+.cache
+dist
 coverage
