--- a/mylib/package.json
+++ b/mylib/package.json
@@ -40,18 +40,18 @@
     "no-scroll": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^25.2.1",
-    "@types/no-scroll": "^2.1.0",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-transition-group": "^4.2.4",
-    "husky": "^4.2.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "tsdx": "^0.13.1",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "@babel/core": "7.9.0",
+    "@types/classnames": "2.2.10",
+    "@types/jest": "25.2.1",
+    "@types/no-scroll": "2.1.0",
+    "@types/react": "16.9.32",
+    "@types/react-dom": "16.9.6",
+    "@types/react-transition-group": "4.2.4",
+    "husky": "4.2.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "tsdx": "0.13.1",
+    "tslib": "1.11.1",
+    "typescript": "3.8.3"
   }
 }
