--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
   "prettier": {
     "singleQuote": true
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
   "keywords": [
     "react",
     "responsive",
