--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react-dom": "16.9.6",
     "@types/react-transition-group": "4.2.4",
     "codecov": "3.6.5",
+    "docz": "2.3.1",
     "husky": "4.2.3",
     "prettier": "2.0.2",
     "react": "16.13.1",
