--- a/package.json
+++ b/package.json
@@ -22,12 +22,7 @@
   ],
   "jest": {
     "setupFilesAfterEnv": [
-      "./__tests__/setupTests.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/docs/",
-      "<rootDir>/__tests__/setupTests.js"
+      "./__tests__/setupTests.ts"
     ]
   },
   "prettier": {
@@ -68,6 +63,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@testing-library/jest-dom": "5.3.0",
+    "@testing-library/react": "10.0.2",
     "@types/classnames": "2.2.10",
     "@types/jest": "25.2.1",
     "@types/no-scroll": "2.1.0",
