--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
     "size": "size-limit",
     "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\"",
     "generate-props": "node scripts/generateReactPropsTable.js src/modal.js && yarn prettier"
