--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@size-limit/preset-small-lib": "4.4.5",
     "@testing-library/jest-dom": "5.3.0",
     "@testing-library/react": "10.0.2",
     "@types/classnames": "2.2.10",
@@ -75,10 +76,10 @@
     "codecov": "3.6.5",
     "docz": "2.3.1",
     "husky": "4.2.3",
-    "prettier": "2.0.2",
+    "prettier": "2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "size-limit": "1.3.1",
+    "size-limit": "4.4.5",
     "tsdx": "0.13.1",
     "tslib": "1.11.1",
     "typescript": "3.8.3"
