--- a/package.json
+++ b/package.json
@@ -1,51 +1,46 @@
 {
   "name": "react-responsive-modal",
   "version": "4.0.1",
-  "description": "A simple responsive and accessible react modal",
-  "main": "lib/index.js",
-  "module": "lib/index.es.js",
-  "jsnext:main": "lib/index.es.js",
-  "types": "types",
+  "description": "A simple responsive and accessible react modal compatible with React 16 and ready for React 17",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/mylib.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
-    "build": "rollup -c",
-    "build:watch": "rollup -c -w",
-    "lint": "eslint 'src' '__tests__'",
-    "test": "yarn test:coverage && yarn lint && yarn build && yarn dtslint && yarn size && yarn docz:build",
-    "test:only": "jest __tests__",
-    "test:coverage": "yarn test:only --coverage",
     "size": "size-limit",
     "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\"",
-    "dtslint": "dtslint types",
     "generate-props": "node scripts/generateReactPropsTable.js src/modal.js && yarn prettier"
   },
   "files": [
-    "lib",
-    "types",
-    "src"
+    "dist",
+    "src",
+    "styles.css"
   ],
   "jest": {
     "setupFilesAfterEnv": [
-      "./__tests__/setupTests.js"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/docs/",
-      "<rootDir>/__tests__/setupTests.js"
-    ],
-    "moduleNameMapper": {
-      "\\.(css)$": "identity-obj-proxy"
-    }
+      "./__tests__/setupTests.ts"
+    ]
   },
   "prettier": {
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "singleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
   },
   "keywords": [
     "react",
     "responsive",
     "modal",
+    "mobile",
     "flex"
   ],
   "repository": "git+https://github.com/pradel/react-responsive-modal.git",
@@ -53,64 +48,41 @@
   "bugs": {
     "url": "https://github.com/pradel/react-responsive-modal/issues"
   },
-  "homepage": "https://github.com/pradel/react-responsive-modal#readme",
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "focus-trap-react": "^4.0.1",
-    "no-scroll": "^2.1.1",
-    "prop-types": "^15.6.2",
-    "react-transition-group": "^4.0.0"
-  },
-  "peerDependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.8.6",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/preset-env": "7.8.6",
-    "@babel/preset-react": "7.8.3",
-    "@types/react": "16.9.31",
-    "@types/react-dom": "16.9.6",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "24.8.0",
-    "babel-plugin-external-helpers": "6.22.0",
-    "babel-polyfill": "6.26.0",
-    "codecov": "3.6.5",
-    "docz": "1.3.2",
-    "docz-plugin-css": "0.11.0",
-    "docz-plugin-netlify": "1.1.4",
-    "docz-theme-default": "1.2.0",
-    "dtslint": "0.9.3",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb": "17.1.1",
-    "eslint-config-prettier": "4.3.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-jsx-import": "0.0.1",
-    "eslint-plugin-react": "7.18.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "24.8.0",
-    "jest-enzyme": "7.1.2",
-    "prettier": "1.17.0",
-    "react": "16.8.6",
-    "react-docgen": "2.21.0",
-    "react-dom": "16.8.6",
-    "react-hot-loader": "4.8.4",
-    "rollup": "1.11.3",
-    "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-peer-deps-external": "2.2.0",
-    "rollup-plugin-postcss": "2.0.3",
-    "size-limit": "1.3.1"
-  },
+  "homepage": "https://react-responsive-modal.leopradel.com/",
   "size-limit": [
     {
-      "path": "lib/index.js",
-      "limit": "8 KB"
+      "path": "dist/index.js",
+      "limit": "3.1 KB"
     }
   ],
-  "license": "MIT"
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "no-scroll": "^2.1.1"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.9.0",
+    "@size-limit/preset-small-lib": "4.4.5",
+    "@testing-library/jest-dom": "5.3.0",
+    "@testing-library/react": "10.0.2",
+    "@types/classnames": "2.2.10",
+    "@types/jest": "25.2.1",
+    "@types/no-scroll": "2.1.0",
+    "@types/react": "16.9.32",
+    "@types/react-dom": "16.9.6",
+    "@types/react-transition-group": "4.2.4",
+    "codecov": "3.6.5",
+    "docz": "2.3.1",
+    "husky": "4.2.3",
+    "prettier": "2.0.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "size-limit": "4.4.5",
+    "tsdx": "0.13.1",
+    "tslib": "1.11.1",
+    "typescript": "3.8.3"
+  }
 }
