--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/classnames": "2.2.10",
     "@types/jest": "25.2.1",
     "@types/no-scroll": "2.1.0",
+    "@types/node": "14.0.13",
     "@types/react": "16.9.32",
     "@types/react-dom": "16.9.7",
     "@types/react-transition-group": "4.2.4",
