build docs github ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,3 +49,8 @@ jobs:
         run: yarn size
         env:
           CI: true
+  
+      - name: Build docs
+        run: yarn docz:build
+        env:
+          CI: true
