--- a/package.json
+++ b/package.json
@@ -63,25 +63,26 @@
     "react-dom": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
-    "@size-limit/preset-small-lib": "4.5.0",
-    "@testing-library/jest-dom": "5.5.0",
-    "@testing-library/react": "10.0.4",
+    "@size-limit/preset-small-lib": "4.5.2",
+    "@testing-library/jest-dom": "5.10.1",
+    "@testing-library/react": "10.4.1",
     "@types/classnames": "2.2.10",
-    "@types/jest": "25.2.1",
     "@types/no-scroll": "2.1.0",
-    "@types/react": "16.9.32",
-    "@types/react-dom": "16.9.7",
-    "@types/react-transition-group": "4.2.4",
-    "codecov": "3.6.5",
+    "@types/node": "14.0.13",
+    "@types/react": "16.9.39",
+    "@types/react-dom": "16.9.8",
+    "@types/react-transition-group": "4.4.0",
+    "codecov": "3.7.0",
     "docz": "2.3.1",
+    "gatsby": "2.23.11",
+    "gatsby-theme-docz": "2.3.1",
     "husky": "4.2.5",
-    "prettier": "2.0.3",
+    "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "size-limit": "4.4.5",
-    "tsdx": "0.13.1",
-    "tslib": "1.11.1",
-    "typescript": "3.8.3"
+    "size-limit": "4.5.2",
+    "tsdx": "0.13.2",
+    "tslib": "1.13.0",
+    "typescript": "^3.9.5"
   }
 }
