--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-responsive-modal",
   "version": "5.1.1",
-  "description": "A simple responsive and accessible react modal compatible with React 16 and ready for React 17",
+  "description": "A simple responsive and accessible react modal",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react-responsive-modal.esm.js",
@@ -60,30 +60,30 @@
     "no-scroll": "^2.1.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.0 || ^17",
+    "react-dom": "^16.8.0 || ^17"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "4.5.7",
+    "@size-limit/preset-small-lib": "4.7.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "10.4.9",
     "@types/classnames": "2.2.10",
     "@types/no-scroll": "2.1.0",
-    "@types/node": "14.0.27",
-    "@types/react": "16.9.39",
-    "@types/react-dom": "16.9.8",
+    "@types/node": "14.14.5",
+    "@types/react": "16.9.54",
+    "@types/react-dom": "16.9.9",
     "@types/react-transition-group": "4.4.0",
-    "codecov": "3.7.2",
+    "codecov": "3.8.0",
     "docz": "2.3.1",
     "gatsby": "2.23.11",
     "gatsby-theme-docz": "2.3.1",
-    "husky": "4.2.5",
-    "prettier": "2.1.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "size-limit": "4.5.7",
-    "tsdx": "0.13.3",
-    "tslib": "2.0.1",
-    "typescript": "4.0.2"
+    "husky": "4.3.0",
+    "prettier": "2.1.2",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "size-limit": "4.7.0",
+    "tsdx": "0.14.1",
+    "tslib": "2.0.3",
+    "typescript": "4.0.5"
   }
 }
