--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,9 @@ jobs:
         env:
           CI: true
 
+      - name: Report coverage
+        uses: codecov/codecov-action@v1
+
       - name: Build
         run: yarn build
 
