--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "jest": {
     "setupFilesAfterEnv": [
       "./__tests__/setupTests.ts"
+    ],
+    "coveragePathIgnorePatterns": [
+      "src/lib"
     ]
   },
   "prettier": {
@@ -77,7 +80,6 @@
     "@types/react": "16.9.54",
     "@types/react-dom": "16.9.9",
     "@types/react-transition-group": "4.4.0",
-    "codecov": "3.8.0",
     "docz": "2.3.1",
     "gatsby": "2.23.11",
     "gatsby-theme-docz": "2.3.1",
