--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "size-limit": "4.7.0",
+    "standard-version": "9.0.0",
     "tsdx": "0.14.1",
     "tslib": "2.0.3",
     "typescript": "4.0.5"
