--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: GoogleCloudPlatform/release-please-action@v2.5.6
+        id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
