--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/react-dom": "16.9.9",
     "@types/react-transition-group": "4.4.0",
     "docz": "2.3.1",
+    "eslint-plugin-prettier": "3.1.4",
     "gatsby": "2.23.11",
     "gatsby-theme-docz": "2.3.1",
     "husky": "4.3.0",
