--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-transition-group": "4.4.0",
+    "cypress": "5.5.0",
     "docz": "2.3.1",
     "gatsby": "2.23.11",
     "gatsby-theme-docz": "2.3.1",
