jest should not run cypress tests

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "setupFilesAfterEnv": [
       "./__tests__/setupTests.ts"
     ],
+    "modulePathIgnorePatterns": [
+      "cypress"
+    ],
     "coveragePathIgnorePatterns": [
       "src/lib"
     ]
