--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,18 +33,12 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --immutable
-        env:
-          CI: true
 
       - name: Lint
         run: yarn lint
-        env:
-          CI: true
 
       - name: Test
         run: yarn test --ci --coverage --maxWorkers=2
-        env:
-          CI: true
 
       - name: Report coverage
         uses: codecov/codecov-action@v1
@@ -54,5 +48,10 @@ jobs:
 
       - name: Build docs
         run: yarn docz:build
-        env:
-          CI: true
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          # Dependencies already installed before
+          install: false
+          start: yarn dlx serve -l 3000 .docz/dist
