--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
+    "tailwindcss": "1.9.6",
     "typescript": "4.0.5"
   },
   "license": "MIT"
