--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,7 @@
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "tailwindcss": "1.9.6",
+    "typeface-inter": "1.1.13",
     "typescript": "4.0.5"
   },
   "license": "MIT"
