--- a/website/package.json
+++ b/website/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "next": "10.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-live": "2.2.3",
+    "react-responsive-modal": "5.2.6"
   },
   "devDependencies": {
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
+    "babel-plugin-macros": "2.8.0",
+    "babel-plugin-preval": "5.0.0",
     "tailwindcss": "1.9.6",
     "typeface-inter": "1.1.13",
     "typescript": "4.0.5"
