--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -18,6 +18,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/examples"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
