--- a/package.json
+++ b/package.json
@@ -1,99 +1,6 @@
 {
-  "name": "react-responsive-modal",
-  "version": "5.2.6",
-  "description": "A simple responsive and accessible react modal",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/react-responsive-modal.esm.js",
-  "typings": "dist/index.d.ts",
-  "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build",
-    "size": "size-limit",
-    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\""
-  },
-  "files": [
-    "dist",
-    "src",
-    "styles.css"
-  ],
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./__tests__/setupTests.ts"
-    ],
-    "modulePathIgnorePatterns": [
-      "cypress"
-    ],
-    "coveragePathIgnorePatterns": [
-      "src/lib"
-    ]
-  },
-  "prettier": {
-    "singleQuote": true
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "keywords": [
-    "react",
-    "responsive",
-    "modal",
-    "mobile",
-    "flex"
-  ],
-  "repository": "git+https://github.com/pradel/react-responsive-modal.git",
-  "author": "Léo Pradel",
-  "bugs": {
-    "url": "https://github.com/pradel/react-responsive-modal/issues"
-  },
-  "homepage": "https://react-responsive-modal.leopradel.com/",
-  "funding": "https://github.com/sponsors/pradel",
-  "size-limit": [
-    {
-      "path": "dist/react-responsive-modal.cjs.production.min.js",
-      "limit": "3.3 KB"
-    },
-    {
-      "path": "dist/react-responsive-modal.esm.js",
-      "limit": "3.3 KB"
-    }
-  ],
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "no-scroll": "^2.1.1"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17",
-    "react-dom": "^16.8.0 || ^17"
-  },
-  "devDependencies": {
-    "@size-limit/preset-small-lib": "4.7.0",
-    "@testing-library/jest-dom": "5.11.5",
-    "@testing-library/react": "11.1.1",
-    "@types/classnames": "2.2.11",
-    "@types/no-scroll": "2.1.0",
-    "@types/node": "14.14.6",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
-    "@types/react-transition-group": "4.4.0",
-    "cypress": "5.5.0",
-    "docz": "2.3.1",
-    "gatsby": "2.23.11",
-    "gatsby-theme-docz": "2.3.1",
-    "husky": "4.3.0",
-    "prettier": "2.1.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "size-limit": "4.7.0",
-    "tsdx": "0.14.1",
-    "tslib": "2.0.3",
-    "typescript": "4.0.5"
-  }
+  "private": true,
+  "workspaces": [
+    "react-responsive-modal"
+  ]
 }
