--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
   "private": true,
+  "scripts": {
+    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\""
+  },
   "workspaces": [
     "react-responsive-modal"
-  ]
+  ],
+  "prettier": {
+    "singleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,css,scss,json,md,mdx}": "prettier --write"
+  },
+  "devDependencies": {
+    "husky": "4.3.0",
+    "lint-staged": "10.5.1",
+    "prettier": "2.1.2"
+  }
 }
