--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -20,8 +21,6 @@
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
-    "babel-plugin-macros": "2.8.0",
-    "babel-plugin-preval": "5.0.0",
     "highlight.js": "10.3.2",
     "rehype-autolink-headings": "5.0.1",
     "rehype-slug": "4.0.1",
