--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx}\""
+    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx,yml}\""
   },
   "workspaces": [
     "react-responsive-modal",
@@ -16,7 +16,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx,css,scss,json,md,mdx}": "prettier --write"
+    "*.{js,ts,tsx,css,scss,json,md,mdx,yml}": "prettier --write"
   },
   "devDependencies": {
     "husky": "4.3.0",
