--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -72,6 +72,7 @@
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-transition-group": "4.4.0",
+    "babel-jest": "26.6.3",
     "cypress": "5.6.0",
     "husky": "4.3.0",
     "prettier": "2.1.2",
