--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -12,8 +12,6 @@
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build",
     "size": "size-limit"
   },
   "files": [
@@ -66,22 +64,20 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.7.0",
-    "@testing-library/jest-dom": "5.11.5",
-    "@testing-library/react": "11.1.1",
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "11.1.2",
     "@types/classnames": "2.2.11",
     "@types/no-scroll": "2.1.0",
-    "@types/node": "14.14.6",
+    "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-transition-group": "4.4.0",
-    "cypress": "5.5.0",
-    "docz": "2.3.1",
-    "gatsby": "2.23.11",
-    "gatsby-theme-docz": "2.3.1",
+    "babel-jest": "26.6.3",
+    "cypress": "5.6.0",
     "husky": "4.3.0",
     "prettier": "2.1.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "size-limit": "4.7.0",
     "tsdx": "0.14.1",
     "tslib": "2.0.3",
