fix(docs): fix website dependencies

--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-responsive-modal": "5.2.6"
+    "react-responsive-modal": "workspace:react-responsive-modal"
   },
   "devDependencies": {
     "@mdx-js/loader": "1.6.21",
