fix: remove @huksley prefix

--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@huksley/react-responsive-modal",
+  "name": "react-responsive-modal",
   "version": "6.1.0",
   "description": "A simple responsive and accessible react modal",
   "license": "MIT",
