--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,10 @@
 {
+  "packages": {
+    ".": {
+      "release-type": "node",
+      "package-name": "react-responsive-modal"
+    }
+  },
   "extra-files": [
     {
       "type": "json",
