--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,7 +9,7 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v3.7
+      - uses: GoogleCloudPlatform/release-please-action@v3.2
         id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -22,15 +22,14 @@ jobs:
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Use Node 18
-        uses: actions/setup-node@v3
+      - name: Use Node 16
+        uses: actions/setup-node@v1
         with:
-          node-version: '18'
-          cache: 'yarn'
+          node-version: 16.x
         if: ${{ steps.release.outputs.release_created }}
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --immutable
+        run: yarn install --immutable
         if: ${{ steps.release.outputs.release_created }}
 
       - name: Build react-responsive-modal
