--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -10,11 +10,22 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Use Node 18
-        uses: actions/setup-node@v3
+      - name: Use Node 12
+        uses: actions/setup-node@v1
         with:
-          node-version: '18'
-          cache: 'yarn'
+          node-version: 12.x
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - uses: andresz1/size-limit-action@v1
         with:
