--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -16,6 +16,9 @@ jobs:
           node-version: 22.x
           cache: 'yarn'
 
+      - name: Install dependencies
+        run: yarn install --immutable
+
       - uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
