--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -23,3 +23,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: react-responsive-modal
+          package_manager: yarn
